--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 # dependencies
 /node_modules
 /.pnp
+/uploads
 .pnp.js
+.env
 
 # testing
 /coverage
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
